--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
+    "formidable": "^1.1.1",
     "mysql": "^2.13.0"
   }
 }
